[gd_scene load_steps=4 format=3 uid="uid://drs0ufqofqikk"]

[ext_resource type="Script" path="res://pause.gd" id="1_ja1ba"]
[ext_resource type="FontFile" uid="uid://bcxt1posuy7df" path="res://art/Marion Bridge Demo.otf" id="2_c0881"]
[ext_resource type="FontFile" uid="uid://cehn88v5quk2m" path="res://art/Smasher 312 Custom.ttf" id="3_ejjil"]

[node name="Pause" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_ja1ba")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1170.0
offset_bottom = 669.0
color = Color(0.103744, 0.103744, 0.103744, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -116.5
offset_top = -427.0
offset_right = 116.5
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_c0881")
theme_override_font_sizes/font_size = 100
text = "resume
"

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_c0881")
theme_override_font_sizes/font_size = 100
text = "title screen"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_c0881")
theme_override_font_sizes/font_size = 100
text = "exit
"

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -288.0
offset_top = 130.0
offset_right = 272.0
offset_bottom = 267.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.384314, 0.854902, 0.447059, 1)
theme_override_fonts/font = ExtResource("3_ejjil")
theme_override_font_sizes/font_size = 70
text = "PAUSED"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
